cabal-version: 1.12

name:               graph-search
synopsis:           Common traversal algorithms for implicit graph structures
description:
    Graph traversal algorithms adapted from
    the @search-algorithms@ package
    <https://hackage.haskell.org/package/search-algorithms>
    .
    Intended to include (once complete): depth-first, breadth-first, Djikstra,
    and A*.
    .
    See the README for further details
    (at <https://github.com/phlummox-dev/graph-search#readme>)
version:            0.1.0
homepage:           https://github.com/phlummox/graph-search#readme
bug-reports:        https://github.com/phlummox/graph-search/issues
author:             Phlummox
maintainer:         Phlummox <phlummox2@gmail.com>
copyright:          2022 Phlummox
license:            BSD2
category:           Algorithm
build-type:         Simple
extra-source-files: ChangeLog.md
                    LICENSE
                    README.md
                    stack-lts-14.yaml

-- tested-with:         GHC == 8.8.3

source-repository head
  type:             git
  location:         https://github.com/phlummox/graph-search.git

Flag ExtraGhcWarnings
  Description:      Enable extra ghc warnings
  Default:          True
  Manual:           True

library
  hs-source-dirs:   src
  exposed-modules:  Algorithm.Traverse
  ghc-options:      -Wall
  build-depends:
      base >= 4.0 && < 5
    , containers
  default-language: Haskell2010
  if flag(ExtraGhcWarnings)
    if impl(ghc >= 8.0.1)
      -- -new-style warn options, plus
      -- can use a few new warnings
      ghc-options:  -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -Wno-name-shadowing
                    -Wno-orphans
                    -Wno-type-defaults
                    -fwarn-tabs
    else
      ghc-options:  -Wall
                    -fno-warn-name-shadowing
                    -fwarn-incomplete-record-updates
                    -fwarn-incomplete-uni-patterns
                    -fno-warn-type-defaults
                    -fwarn-tabs
    if impl(ghc >= 8.4)
      ghc-options:  -Wmissing-export-lists
                    -Wpartial-fields
    if impl(ghc >= 8.8)
      ghc-options:  -Wmissing-deriving-strategies

test-suite graph-search-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:
      base
    , graph-search
    , hspec
    , hspec-core
    , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

